--- a/project.ipynb
+++ b/project.ipynb
@@ -2,31 +2,45 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'matplotlib'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[41], line 8\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mrandom\u001b[39;00m\n\u001b[1;32m----> 8\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'matplotlib'"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import classification_report\n",
-    "from sklearn.experimental import enable_iterative_imputer as poop\n",
+    "from sklearn.experimental import enable_iterative_imputer\n",
+    "from sklearn.impute import IterativeImputer\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import random\n"
+    "import random\n",
+    "import matplotlib.pyplot as plt\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "table = pd.read_csv(\"train.csv\")\n",
-    "table2 = pd.read_csv(\"test.csv\")"
+    "table2 = pd.read_csv(\"test.csv\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +168,7 @@
        "4         151.0   565.0     2.0         True  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,27 +181,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'module' object is not callable",
+     "ename": "NameError",
+     "evalue": "name 'isnan' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[13], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#age imputation using iterativeImpute\u001b[39;00m\n\u001b[0;32m      2\u001b[0m age \u001b[38;5;241m=\u001b[39m df\u001b[38;5;241m.\u001b[39mcopy()\n\u001b[1;32m----> 3\u001b[0m model \u001b[38;5;241m=\u001b[39m \u001b[43mpoop\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrandom_state\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      4\u001b[0m model\u001b[38;5;241m.\u001b[39mtransform(age[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAge\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(age[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAge\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'module' object is not callable"
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[42], line 8\u001b[0m\n\u001b[0;32m      5\u001b[0m model\u001b[38;5;241m.\u001b[39mfit(X)\n\u001b[0;32m      7\u001b[0m results \u001b[38;5;241m=\u001b[39m model\u001b[38;5;241m.\u001b[39mtransform(X)\n\u001b[1;32m----> 8\u001b[0m \u001b[38;5;28msum\u001b[39m(\u001b[43misnan\u001b[49m(results)\u001b[38;5;241m.\u001b[39mflatten())\n\u001b[0;32m      9\u001b[0m \u001b[38;5;66;03m#print(age[\"Age\"])\u001b[39;00m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'isnan' is not defined"
      ]
     }
    ],
    "source": [
     "#age imputation using iterativeImpute\n",
     "age = df.copy()\n",
-    "model = poop(random_state=0)\n",
-    "model.transform(age[\"Age\"])\n",
-    "print(age[\"Age\"])\n"
+    "X = age.drop(columns=[\"Transported\", \"HomePlanet\", \"CryoSleep\", \"Destination\", \"VIP\"])\n",
+    "model = IterativeImputer(random_state=0)\n",
+    "model.fit(X)\n",
+    "\n",
+    "results = model.transform(X)\n",
+    "sum(isnan(results).flatten())\n",
+    "#print(age[\"Age\"])\n"
    ]
   },
   {
@@ -397,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -416,6 +434,11 @@
       "VIP\n",
       "False    8393\n",
       "True      300\n",
+      "Name: count, dtype: int64\n",
+      "Destination\n",
+      "TRAPPIST-1e      6040\n",
+      "55 Cancri e      1839\n",
+      "PSO J318.5-22     814\n",
       "Name: count, dtype: int64\n"
      ]
     }
@@ -440,6 +463,7 @@
     "\n",
     "#Dictionary to distribute values\n",
     "home_planet_dict = {\"Earth\": 107, \"Mars\":43, \"Europa\":51}\n",
+    "destination_dict = {\"TRAPPIST-1e\": 125, \"55 Cancri e\": 39, \"PSO J318.5-22\": 18}\n",
     "cyrosleep_dict = {True: 109, False: 108}\n",
     "vip_dict = {True: 101, False: 102}\n",
     "\n",
@@ -454,14 +478,24 @@
     "    return key\n",
     "\n",
     "#Replace each NaN in 'HomePlanet' with a random value from home planet dict\n",
-    "remove_nans_df['HomePlanet'] = remove_nans_df[\"HomePlanet\"].apply(lambda x: get_random_dict_value_and_update(home_planet_dict) if pd.isnull(x) else x)\n",
-    "remove_nans_df['CryoSleep'] = remove_nans_df[\"CryoSleep\"].apply(lambda x: get_random_dict_value_and_update(cyrosleep_dict) if pd.isnull(x) else x)\n",
-    "remove_nans_df['VIP'] = remove_nans_df[\"VIP\"].apply(lambda x: get_random_dict_value_and_update(vip_dict) if pd.isnull(x) else x)\n",
+    "remove_nans_df['HomePlanet']    = remove_nans_df[\"HomePlanet\"].apply(lambda x: get_random_dict_value_and_update(home_planet_dict) if pd.isnull(x) else x)\n",
+    "remove_nans_df['Destination']   = remove_nans_df[\"Destination\"].apply(lambda x: get_random_dict_value_and_update(destination_dict) if pd.isnull(x) else x)\n",
+    "remove_nans_df['CryoSleep']     = remove_nans_df[\"CryoSleep\"].apply(lambda x: get_random_dict_value_and_update(cyrosleep_dict) if pd.isnull(x) else x)\n",
+    "remove_nans_df['VIP']           = remove_nans_df[\"VIP\"].apply(lambda x: get_random_dict_value_and_update(vip_dict) if pd.isnull(x) else x)\n",
     "\n",
     "print(remove_nans_df[\"HomePlanet\"].value_counts())\n",
     "print(remove_nans_df[\"CryoSleep\"].value_counts())\n",
     "print(remove_nans_df[\"VIP\"].value_counts())\n",
-    "#T\n"
+    "print(remove_nans_df[\"Destination\"].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Graphing what we have found so far with the replaced NaN values\n"
    ]
   },
   {
@@ -523,7 +557,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "undefined.undefined.undefined"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
